updated namespace to `azure-ai-textanalytics-authoring`

--- a/specification/cognitiveservices/Language.AnalyzeText-authoring/tspconfig.yaml
+++ b/specification/cognitiveservices/Language.AnalyzeText-authoring/tspconfig.yaml
@@ -21,8 +21,9 @@ options:
     flavor: azure
     generate-sample-project: false
   "@azure-tools/typespec-python":
-    package-dir: "azure-ai-language-text-authoring"
-    namespace: "azure.ai.language.text.authoring"
+    package-name: "azure-ai-textanalytics-authoring"
+    package-dir: "azure-ai-textanalytics-authoring"
+    namespace: "azure.ai.textanalytics.authoring"
     generate-test: true
     generate-sample: true
     flavor: "azure"
