--- a/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/CreateOrReplace_NamespaceAsset.json
+++ b/specification/deviceregistry/resource-manager/Microsoft.DeviceRegistry/stable/2025-10-01/examples/CreateOrReplace_NamespaceAsset.json
@@ -455,26 +455,56 @@
                 }
               }
             ],
-            "events": [
+            "eventGroups": [
               {
-                "name": "event1",
-                "messageSchemaReference": {
-                  "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
-                  "schemaName": "lytgdlsvivtcrtuvje",
-                  "schemaVersion": "1"
-                },
-                "error": {
-                  "code": "400",
-                  "message": "Error",
-                  "details": [
-                    {
-                      "code": "400.123.456.789",
-                      "message": "Validation error",
-                      "info": "Property is not valid.",
-                      "correlationId": "xqoettlcdlxchoscv"
+                "name": "eventGroup1",
+                "events": [
+                  {
+                    "name": "event1",
+                    "messageSchemaReference": {
+                      "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
+                      "schemaName": "lytgdlsvivtcrtuvje",
+                      "schemaVersion": "1"
+                    },
+                    "error": {
+                      "code": "400",
+                      "message": "Error",
+                      "details": [
+                        {
+                          "code": "400.123.456.789",
+                          "message": "Validation error",
+                          "info": "Property is not valid.",
+                          "correlationId": "xqoettlcdlxchoscv"
+                        }
+                      ]
                     }
-                  ]
-                }
+                  }
+                ]
+              },
+              {
+                "name": "eventGroup2",
+                "events": [
+                  {
+                    "name": "event1",
+                    "messageSchemaReference": {
+                      "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
+                      "schemaName": "lytgdlsvivtcrtuvje",
+                      "schemaVersion": "1"
+                    },
+                    "error": {
+                      "code": "400",
+                      "message": "Error",
+                      "details": [
+                        {
+                          "code": "400.123.456.789",
+                          "message": "Validation error",
+                          "info": "Property is not valid.",
+                          "correlationId": "xqoettlcdlxchoscv"
+                        }
+                      ]
+                    }
+                  }
+                ]
               }
             ],
             "streams": [
