--- a/specification/ai/Azure.AI.Projects/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Projects/tspconfig.yaml
@@ -22,6 +22,7 @@ options:
     emitter-output-dir: "{output-dir}/{service-dir}/{package-name}"
     package-name: Azure.AI.Projects
     api-version: "2025-05-15-preview"
+    flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-projects"
     api-version: "v1"
