--- a/specification/deviceregistry/DeviceRegistry.Management/examples/2025-10-01/CreateOrReplace_NamespaceAsset.json
+++ b/specification/deviceregistry/DeviceRegistry.Management/examples/2025-10-01/CreateOrReplace_NamespaceAsset.json
@@ -457,32 +457,7 @@
             ],
             "eventGroups": [
               {
-                "name": "eventGroup1",
-                "events": [
-                  {
-                    "name": "event1",
-                    "messageSchemaReference": {
-                      "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
-                      "schemaName": "lytgdlsvivtcrtuvje",
-                      "schemaVersion": "1"
-                    },
-                    "error": {
-                      "code": "400",
-                      "message": "Error",
-                      "details": [
-                        {
-                          "code": "400.123.456.789",
-                          "message": "Validation error",
-                          "info": "Property is not valid.",
-                          "correlationId": "xqoettlcdlxchoscv"
-                        }
-                      ]
-                    }
-                  }
-                ]
-              },
-              {
-                "name": "eventGroup2",
+                "name": "default",
                 "events": [
                   {
                     "name": "event1",
@@ -843,26 +818,31 @@
                 }
               }
             ],
-            "events": [
+            "eventGroups": [
               {
-                "name": "event1",
-                "messageSchemaReference": {
-                  "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
-                  "schemaName": "lytgdlsvivtcrtuvje",
-                  "schemaVersion": "1"
-                },
-                "error": {
-                  "code": "400",
-                  "message": "Error",
-                  "details": [
-                    {
-                      "code": "400.123.456.789",
-                      "message": "Validation error",
-                      "info": "Property is not valid.",
-                      "correlationId": "xqoettlcdlxchoscv"
+                "name": "default",
+                "events": [
+                  {
+                    "name": "event1",
+                    "messageSchemaReference": {
+                      "schemaRegistryNamespace": "liagdwhnvlhcptvmufws",
+                      "schemaName": "lytgdlsvivtcrtuvje",
+                      "schemaVersion": "1"
+                    },
+                    "error": {
+                      "code": "400",
+                      "message": "Error",
+                      "details": [
+                        {
+                          "code": "400.123.456.789",
+                          "message": "Validation error",
+                          "info": "Property is not valid.",
+                          "correlationId": "xqoettlcdlxchoscv"
+                        }
+                      ]
                     }
-                  ]
-                }
+                  }
+                ]
               }
             ],
             "streams": [
