--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -3484,16 +3484,10 @@
         "modelDeploymentName": {
           "type": "string",
           "description": "The model deployment to be evaluated. Accepts either the deployment name alone or with the connection name as '{connectionName}/<modelDeploymentName>'."
-        },
-        "modelParams": {
-          "type": "object",
-          "description": "Optional parameters passed to the model for analysis and insight generation.",
-          "additionalProperties": {}
         }
       },
       "required": [
-        "modelDeploymentName",
-        "modelParams"
+        "modelDeploymentName"
       ]
     },
     "ModelDeployment": {
