--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -1356,7 +1356,7 @@
     "/insights": {
       "get": {
         "operationId": "Insights_ListInsightsReports",
-        "description": "List all insights reports.",
+        "description": "List all insights reports in reverse chronological order (newest first).",
         "parameters": [
           {
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
