Fix query parameter for GET API

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -1523,6 +1523,13 @@
             "type": "string"
           },
           {
+            "name": "includeCoordinates",
+            "in": "query",
+            "description": "Whether to include coordinates for visualization in the response. Defaults to false.",
+            "required": false,
+            "type": "boolean"
+          },
+          {
             "$ref": "#/parameters/Azure.Core.ClientRequestIdHeader"
           }
         ],
