Site maintenance mode feature for Web Sites. New properties for websites as well as ErrorPages. The maintenanceEnabled property was added o websites, and SubstatusCode and Name to ErrorPages. This adds the necessary info and payloads to support the site maintenance mode feature that will return the "maintenance" custom error page if the site is set to maintenance. By default, it will be disabled.

--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
@@ -25748,6 +25748,16 @@
         "alwaysUse": {
           "description": "If true, the error page will be shown for all requests with a matching status code, regardless of whether they failed on the App Service FrontEnd load balancer or on the app itself.",
           "type": "boolean"
+        },
+        "SubstatusCode": {
+          "description": "The substatus code for which the error page will be used",
+          "type": "integer",
+          "format": "int32"
+        },
+        "Name": {
+          "description": "The name of the error page. This is a read-only property.",
+          "type": "string",
+          "readOnly": true
         }
       }
     },
