--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -1355,8 +1355,8 @@
     },
     "/insights": {
       "get": {
-        "operationId": "Insights_ListInsightsReports",
-        "description": "List all insights reports in reverse chronological order (newest first).",
+        "operationId": "Insights_ListInsights",
+        "description": "List all insights in reverse chronological order (newest first).",
         "parameters": [
           {
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
@@ -1509,8 +1509,8 @@
     },
     "/insights/{id}": {
       "get": {
-        "operationId": "Insights_GetInsights",
-        "description": "Get a specific insights report.",
+        "operationId": "Insights_GetInsight",
+        "description": "Get a specific insight by Id.",
         "parameters": [
           {
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
