--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -61,7 +61,7 @@ options:
     api-version: "7.6"
     crate-name: "azure_security_keyvault_keys"
     crate-version: "0.0.1"
-    emitter-output-dir: "{project-root}/generated"
+    emitter-output-dir: "{output-dir}/{service-dir}/generated"
   "@azure-tools/typespec-client-generator-cli":
     additionalDirectories:
       - "specification/keyvault/Security.KeyVault.Common/"
