--- a/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
+++ b/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
@@ -1,6 +1,6 @@
 parameters:
   "service-dir":
-    default: "sdk/resourcemanager"
+    default: "sdk/trafficmanager"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
@@ -12,30 +12,29 @@ options:
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
-  "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-trafficmanager"
-    namespace: "azure.mgmt.trafficmanager"
-    flavor: "azure"
-    generate-test: true
-    generate-sample: true
   "@azure-tools/typespec-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    flavor: azure
     clear-output-folder: true
     model-namespace: true
     namespace: "Azure.ResourceManager.TrafficManager"
-    flavor: azure
-    generate-sample-project: false
-    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
-  "@azure-tools/typespec-ts":
-    experimental-extensible-enums: true
-    package-dir: "arm-trafficmanager"
-    flavor: azure
-    package-details:
-    name: "@azure/arm-trafficmanager"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-trafficmanager"
+    namespace: "azure.mgmt.trafficmanager"
+    generate-test: true
+    generate-sample: true
+    flavor: "azure"
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-trafficmanager"
     namespace: "com.azure.resourcemanager.trafficmanager"
+    service-name: "Traffic Manager" # human-readable service name, whitespace allowed
     flavor: azure
-    service-name: "Traffic Manager"
+  "@azure-tools/typespec-ts":
+    package-dir: "arm-trafficmanager"
+    flavor: "azure"
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-trafficmanager"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/trafficmanager"
     package-dir: "armtrafficmanager"
