fix tspconfig for java

--- a/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
+++ b/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
@@ -25,6 +25,7 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
+    service-dir: "sdk/resourcemanager"
     package-dir: "azure-resourcemanager-trafficmanager"
     namespace: "com.azure.resourcemanager.trafficmanager"
     service-name: "Traffic Manager" # human-readable service name, whitespace allowed
